# Test18

./: .env  .replit  add_dash_url_column.py  add_test_content.py  admin.py  analyze_studios.py  anilist_integration.py  app.py  auth.py  content.py  cookies.txt  create_episodes_from_basic.py  enhanced_iqiyi_extractor.py  enhanced_iqiyi_scraper.py  extract_project_id.py  get_all_22_episodes.py  iqiyi_alternative.py  iqiyi_dash_extractor.py  iqiyi_direct_scraper.py  iqiyi_fallback_scraper.py  iqiyi_m3u8_scraper.py  iqiyi_play_extractor.py  iqiyi_scraper.py  main.py  migrate_to_iqiyi_play_url.py  models.py  notifications.py  pyproject.toml  replit.md  simple_episode_scraper.py  studio_analysis_results.json  subscription.py  supabase_import_helper.py  test.html  test_anilist_graphql_studio.py  test_anilist_studio.py  test_basic_scraping.py  test_connection.py  test_dash_extraction.py  test_embed_debug.html  (+7 more)
attached_assets/: main3_1754278192395.py
static/: test-plyr.html  test_video_simple.html
static/css/: custom-scrollbar.css  search.css  style.css  video-hero.css
static/js/: app.js  dashboard.js  notifications.js  notifications_old.js  professional-video-player.js  stable-video-player.js
templates/: anime_list.html  base.html  dashboard.html  donghua_list.html  edit_profile.html  genre_content.html  genres.html  index.html  maintenance.html  movies_list.html  profile.html  responsive_base.html  simple_video_player.html  subscription.html  video_player.html  video_player_broken.html  video_player_clean.html  video_player_complex.html  video_player_old.html
(+15 files in other folders)
